entity_macros/tests/ui/derive/ent/no-ent-builder-attr-means-no-typed-builder.stderr
error[E0433]: failed to resolve: use of undeclared type `TestEntBuilder`
  --> $DIR/no-ent-builder-attr-means-no-typed-builder.rs:20:13
   |
20 |     let _ = TestEntBuilder::default();
   |             ^^^^^^^^^^^^^^ use of undeclared type `TestEntBuilder`
